[package]
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
categories = ["algorithms", "mathematics", "science"]
description = "Fast online Qn scale estimator in Rust"
edition = "2021"
keywords = ["qn", "estimator", "statistics"]
license-file = "LICENSE"
name = "fqn-estimator"
publish = true
readme = "README.md"
repository = "https://github.com/eigenein/rust-fqn-estimator"
version = "0.0.1"

[features]
default = ["num-traits"]
num-traits = ["dep:num-traits"]

[lib]

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

[lints.clippy]

# Categories:
all = "warn"
nursery = "warn"
pedantic = "warn"

# Individual flags:
module_name_repetitions = "allow"

[dependencies]
num-traits = { version = "0.2.18", optional = true }
