[package]
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
categories = ["algorithms", "mathematics", "science"]
description = "Fast online Qn scale estimator in Rust"
documentation = "https://docs.rs/fqn-estimator"
edition = "2021"
keywords = ["qn", "estimator", "statistics"]
license-file = "LICENSE"
name = "fqn-estimator"
publish = true
readme = "README.md"
repository = "https://github.com/eigenein/rust-fqn-estimator"
version = "0.2.1"
rust-version = "1.82"

[features]
default = ["num-traits"]
num-traits = ["dep:num-traits"]

[lib]

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

[lints.clippy]

# Categories:
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Individual flags:
module_name_repetitions = "allow"
needless_doctest_main = "allow"

[dependencies]
num-traits = { version = "0.2.18", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
fastrand = "2.0.2"

[[bench]]
name = "fqn_estimator"
harness = false
